--- a/resources/sass/base/_links.scss
+++ b/resources/sass/base/_links.scss
@@ -9,7 +9,7 @@ a {
     @apply no-underline text-pink-500 transition;
 
     &:hover {
-        @apply text-purple-900;
+        @apply text-purple-900 text-black;
     }
 }
 
@@ -18,5 +18,6 @@ a {
     @apply m-0 p-0 absolute whitespace-no-wrap overflow-hidden h-auto;
     border: 0;
     clip: rect(0 0 0 0);
-    width: 1px;
+    width: .2rem;
+    
 }
