--- a/site/blog.njk
+++ b/site/blog.njk
@@ -31,7 +31,9 @@ title: The Skeleventy Blog
                         </a>
                     {% endif %}
                     <div class="p-8">
-                        <h2 class="text-3xl mb-6"><a class="block text-purple-900 hover:text-pink-500" href="{{ post.url }}">{{ post.data.title }}</a></h2>
+                        <h2 class="text-3xl mb-6">
+                            <a class="block text-purple-900 hover:text-pink-500" href="{{ post.url }}">{{ post.data.title }}</a>
+                        </h2>
                         <div class="text-sm text-gray-600 md:flex mb-4">
                             <p class="author">By {{ site.author.name }}</p>
                             <p class="hidden md:block px-2">—</p>
@@ -45,5 +47,3 @@ title: The Skeleventy Blog
         </div>
     </section>
 </main>
-
-
