--- a/site/includes/components/header.njk
+++ b/site/includes/components/header.njk
@@ -1,6 +1,7 @@
-<header id="header" class="header bg-purple-900 flex flex-col md:flex-row md:justify-between items-center p-8" role="banner">
+<header id="header" class="header header fixed pin-t lg:z-40 z-20 w-full bg-indigo-100" role="banner">
 
-	{% include "components/logo.njk" %}
 	{% include 'components/nav.njk' %}
+	{% include 'components/player.njk' %}
+	{% include 'components/share.njk' %}
 
 </header>
