--- a/site/includes/layouts/default.njk
+++ b/site/includes/layouts/default.njk
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="min-h-full antialiased">
+<html lang="en" class="antialiased">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +28,7 @@
         <link rel="icon" type="image/png" href="{{ site.images.favicon }}">
     </head>
 
-    <body {% if body_class %} id="{{ body_class }}"{% endif %} class="min-h-full font-sans text-lg text-purple-darkest leading-normal">
+    <body {% if body_class %} id="{{ body_class }}"{% endif %} class="relative">
 
         <a class="visually-hidden" href="#main">Skip to content</a>
 
