--- a/site/index.njk
+++ b/site/index.njk
@@ -1,9 +1,9 @@
 ---
 layout: default
-meta_title: Home
-meta_description: Homepage description
-body_class: home
-title: Welcome to Skeleventy!
+meta_title: Profile
+meta_description: Your Profile
+body_class: profile
+title: Welcome back.
 ---
 
 <main id="main" class="main container m-auto flex flex-1 flex-col md:flex-row py-10 px-6 lg:px-0 lg:py-20">
