--- a/site/record.njk
+++ b/site/record.njk
@@ -1,9 +1,9 @@
 ---
 layout: default
-meta_title: About
-meta_description: About page description
-body_class: about
-title: About
+meta_title: Record
+meta_description: Start creating a narrative.
+body_class: record
+title: Record
 ---
 
 <main id="main" class="main container m-auto flex flex-1 flex-col md:flex-row py-10 px-6 lg:px-0 lg:py-20">
