--- a/site/narratives.njk
+++ b/site/narratives.njk
@@ -1,9 +1,9 @@
 ---
 layout: default
-meta_title: Blog
-meta_description: Blog page description
+meta_title: Narratives
+meta_description: All your Narratives
 body_class: blog
-title: The Skeleventy Blog
+title: Narratives
 ---
 
 <main id="main" class="main flex flex-1 flex-col md:flex-row py-10 px-6 lg:px-0 lg:py-20 bg-purple-900">
