--- a/site/includes/components/player.njk
+++ b/site/includes/components/player.njk
@@ -1,41 +1,40 @@
-<div class="bg-white shadow-lg rounded-lg">
-{# Make the audio player fit horizontal #}
+<div class="w-full">
+    {# Make the audio player fit horizontal #}
     <div class="flex">
-        <div class="w-full flex">
-            <div class="flex">
-                <h3 class="text-sm text-gray-900 font-medium">Meeting 2018-09-11</h3>
-                <p class="text-sm text-gray-600 mt-1">Recorded by: <span class="italic">John Smith</span></p>
+        <div class="flex self-center">
+            <span class="px-2 m-0 text-sm text-gray-900 font-medium">Meeting 2018-09-11</span>
+            <span class="px-2 m-0 text-sm text-gray-600">Recorded by: <span class="italic">John Smith</span></span>
+        </div>  
+        <div class="w-2/4 pb-4">
+            <div class="flex justify-between items-center mt-2">
+                <div class="text-gray-900">
+                    <svg class="w-4 h-4" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M6.59 12.83L4.4 15c-.58.58-1.59 1-2.4 1H0v-2h2c.29 0 .8-.2 1-.41l2.17-2.18 1.42 1.42zM16 4V1l4 4-4 4V6h-2c-.29 0-.8.2-1 .41l-2.17 2.18L9.4 7.17 11.6 5c.58-.58 1.59-1 2.41-1h2zm0 10v-3l4 4-4 4v-3h-2c-.82 0-1.83-.42-2.41-1l-8.6-8.59C2.8 6.21 2.3 6 2 6H0V4h2c.82 0 1.83.42 2.41 1l8.6 8.59c.2.2.7.41.99.41h2z"/></svg>
+                </div>
+                <div class="text-gray-900">
+                    <svg class="w-4 h-4" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M4 5h3v10H4V5zm12 0v10l-9-5 9-5z"/></svg>
+                </div>
+                <div class="text-white p-2 rounded-full bg-red-400 shadow-lg">
+                    <svg class="w-4 h-4" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M5 4h3v12H5V4zm7 0h3v12h-3V4z"/></svg>
+                </div>
+                <div class="text-grey-darker">
+                    <svg class="w-4 h-4" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M13 5h3v10h-3V5zM4 5l9 5-9 5V5z"/></svg>
+                </div>
+                <div class="text-grey-darker">
+                    <svg class="w-4 h-4" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M5 4a2 2 0 0 0-2 2v6H0l4 4 4-4H5V6h7l2-2H5zm10 4h-3l4-4 4 4h-3v6a2 2 0 0 1-2 2H6l2-2h7V8z"/></svg>
+                </div>
             </div>
-        </div>
-    </div>
-    <div class="mx-8 pb-4">
-        <div class="flex justify-between items-center mt-2">
-            <div class="text-gray-900">
-                <svg class="w-4 h-4" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M6.59 12.83L4.4 15c-.58.58-1.59 1-2.4 1H0v-2h2c.29 0 .8-.2 1-.41l2.17-2.18 1.42 1.42zM16 4V1l4 4-4 4V6h-2c-.29 0-.8.2-1 .41l-2.17 2.18L9.4 7.17 11.6 5c.58-.58 1.59-1 2.41-1h2zm0 10v-3l4 4-4 4v-3h-2c-.82 0-1.83-.42-2.41-1l-8.6-8.59C2.8 6.21 2.3 6 2 6H0V4h2c.82 0 1.83.42 2.41 1l8.6 8.59c.2.2.7.41.99.41h2z"/></svg>
+            <div class="flex justify-between text-sm text-grey-darker">
+                <p>0:40</p>
+                <p>4:20</p>
             </div>
-            <div class="text-gray-900">
-                <svg class="w-4 h-4" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M4 5h3v10H4V5zm12 0v10l-9-5 9-5z"/></svg>
-            </div>
-            <div class="text-white p-2 rounded-full bg-red-400 shadow-lg">
-                <svg class="w-4 h-4" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M5 4h3v12H5V4zm7 0h3v12h-3V4z"/></svg>
-            </div>
-            <div class="text-grey-darker">
-                <svg class="w-4 h-4" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M13 5h3v10h-3V5zM4 5l9 5-9 5V5z"/></svg>
-            </div>
-            <div class="text-grey-darker">
-                <svg class="w-4 h-4" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M5 4a2 2 0 0 0-2 2v6H0l4 4 4-4H5V6h7l2-2H5zm10 4h-3l4-4 4 4h-3v6a2 2 0 0 1-2 2H6l2-2h7V8z"/></svg>
-            </div>
-        </div>
-        <div class="flex justify-between text-sm text-grey-darker">
-            <p>0:40</p>
-            <p>4:20</p>
-        </div>
-        <div class="mt-1">
-            <div class="h-1 bg-gray-600 rounded-full">
-                <div class="w-1/5 h-1 bg-red-400 rounded-full relative">
-                    <span class="w-4 h-4 bg-red-400 absolute rounded-full shadow" style="bottom: -6px; right: 0;"></span>
+            <div class="mt-1">
+                <div class="h-1 bg-gray-600 rounded-full">
+                    <div class="w-1/5 h-1 bg-red-400 rounded-full relative">
+                        <span class="w-4 h-4 bg-red-400 absolute rounded-full shadow" style="bottom: -6px; right: 0;"></span>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
 </div>
