--- a/site/includes/components/share.njk
+++ b/site/includes/components/share.njk
@@ -1,3 +1,4 @@
-<button class=" hover:bg-gray-600 hover:text-white mx-4 py-2 px-8 font-mono font-bold text-black uppercase tracking-widest border-black border-4 bg-white rounded">Share</button>
-
+<div class="flex self-center">
+    <button class=" hover:bg-gray-600 hover:text-white mx-4 py-2 px-8 font-mono font-bold text-black uppercase tracking-widest border-black border-4 bg-white rounded">Share</button>
+</div>
 
