Update for deployment

--- a/resources/sass/base/_typography.scss
+++ b/resources/sass/base/_typography.scss
@@ -25,3 +25,13 @@ h1, h2, h3, h4, h5, h6 {
 		}
     }
 }
+
+.word:hover {
+	@apply underline cursor-pointer;
+
+}
+
+.highlighted {
+	@apply text-blue-700 underline cursor-pointer;
+	
+}
