--- a/site/includes/components/header.njk
+++ b/site/includes/components/header.njk
@@ -1,4 +1,4 @@
-<header id="header" class="header flex fixed pin-t lg:z-40 z-20 w-full bg-indigo-100" role="banner">
+<header id="header" class="header flex justify-around fixed pin-t lg:z-40 z-20 w-full bg-indigo-100 shadow-lg" role="banner">
 
 	{% include 'components/nav.njk' %}
 	{% include 'components/player.njk' %}
