--- a/site/includes/components/player.njk
+++ b/site/includes/components/player.njk
@@ -1,11 +1,11 @@
-<div class="w-full">
+<div class="">
     {# Make the audio player fit horizontal #}
     <div class="flex">
         <div class="flex self-center">
             <span class="px-2 m-0 text-sm text-gray-900 font-medium">Meeting 2018-09-11</span>
             <span class="px-2 m-0 text-sm text-gray-600">Recorded by: <span class="italic">John Smith</span></span>
         </div>  
-        <div class="w-2/4 pb-4">
+        <div class="ml-6 pb-4 w-64">
             <div class="flex justify-between items-center mt-2">
                 <div class="text-gray-900">
                     <svg class="w-4 h-4" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M6.59 12.83L4.4 15c-.58.58-1.59 1-2.4 1H0v-2h2c.29 0 .8-.2 1-.41l2.17-2.18 1.42 1.42zM16 4V1l4 4-4 4V6h-2c-.29 0-.8.2-1 .41l-2.17 2.18L9.4 7.17 11.6 5c.58-.58 1.59-1 2.41-1h2zm0 10v-3l4 4-4 4v-3h-2c-.82 0-1.83-.42-2.41-1l-8.6-8.59C2.8 6.21 2.3 6 2 6H0V4h2c.82 0 1.83.42 2.41 1l8.6 8.59c.2.2.7.41.99.41h2z"/></svg>
