--- a/site/includes/components/timeline.njk
+++ b/site/includes/components/timeline.njk
@@ -1,34 +1,158 @@
 <div class="timeline">
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-    <div class="timeline__section"><a href="" class="timeline__marker"><span></span></a></div>
-   
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span>*</span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+
 </div>
