--- a/site/includes/components/timeline.njk
+++ b/site/includes/components/timeline.njk
@@ -1,11 +1,46 @@
 <div class="timeline">
     <div class="timeline__section">
-        <a href="" class="timeline__marker">
-            <span>*</span>
+        <a href="#002" class="timeline__marker timeline__marker--active">
+            <span>☂️</span>
             <span class="timeline__ticker"></span></a>
     </div>
     <div class="timeline__section">
         <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section ">
+        <a href="" class="timeline__marker timeline__marker--inactive">
+            <span></span>
+            <span class="timeline__ticker"></span></a>
+    </div>
+    <div class="timeline__section">
+        <a href="" class="timeline__marker timeline__marker--inactive">
             <span></span>
             <span class="timeline__ticker"></span></a>
     </div>
@@ -56,7 +91,7 @@
     </div>
     <div class="timeline__section">
         <a href="" class="timeline__marker">
-            <span></span>
+            <span>🚛</span>
             <span class="timeline__ticker"></span></a>
     </div>
     <div class="timeline__section">
@@ -71,42 +106,7 @@
     </div>
     <div class="timeline__section">
         <a href="" class="timeline__marker">
-            <span></span>
-            <span class="timeline__ticker"></span></a>
-    </div>
-    <div class="timeline__section">
-        <a href="" class="timeline__marker">
-            <span></span>
-            <span class="timeline__ticker"></span></a>
-    </div>
-    <div class="timeline__section">
-        <a href="" class="timeline__marker">
-            <span></span>
-            <span class="timeline__ticker"></span></a>
-    </div>
-    <div class="timeline__section">
-        <a href="" class="timeline__marker">
-            <span></span>
-            <span class="timeline__ticker"></span></a>
-    </div>
-    <div class="timeline__section">
-        <a href="" class="timeline__marker">
-            <span></span>
-            <span class="timeline__ticker"></span></a>
-    </div>
-    <div class="timeline__section">
-        <a href="" class="timeline__marker">
-            <span></span>
-            <span class="timeline__ticker"></span></a>
-    </div>
-    <div class="timeline__section">
-        <a href="" class="timeline__marker">
-            <span></span>
-            <span class="timeline__ticker"></span></a>
-    </div>
-    <div class="timeline__section">
-        <a href="" class="timeline__marker">
-            <span></span>
+            <span>🔬</span>
             <span class="timeline__ticker"></span></a>
     </div>
     <div class="timeline__section">
