--- a/site/includes/layouts/narrative.njk
+++ b/site/includes/layouts/narrative.njk
@@ -19,9 +19,9 @@ layout: default
             {# start row #}
             <section id="001" class="flex">
                 {# speaker & timestamp #}
-                <div class="mr-8">
-                    <span>timestamp</span>
-                    <span>speaker</span>
+                <div class="mr-8 ">
+                    <span class="text-indigo-500 text-base font-bold">XX.XX</span>
+                    <span class="text-indigo-700 text-2xl ">speaker</span>
                 </div>
                 {# content area #}
                 <div>
