--- a/site/includes/layouts/narrative.njk
+++ b/site/includes/layouts/narrative.njk
@@ -151,4 +151,5 @@ layout: default
     </article>
 
 </main>
-        <aside>Little Menu</aside>
+<aside>Little Menu</aside>
+<button class="fixed bottom-0 right-0 w-16 h-16 mb-8 mr-8 bg-indigo-100 border-4 border-indigo-500 text-indigo-500 text-2xl rounded-full hover:bg-indigo-300 hover:text-indigo-100">+</button>
