--- a/site/includes/layouts/narrative.njk
+++ b/site/includes/layouts/narrative.njk
@@ -3,10 +3,9 @@ layout: default
 ---
 
 <main id="main" class="main bg-indigo-100 flex-row pt-24">
-    
     <section class="fixed w-full bg-indigo-400">
         <h2>timeline</h2>
-        <div id="highlighted">Highlighted: 0</div>
+        <span id="highlighted" class="text-xl text-white">Highlighted: 0</span>
         {% include 'components/timeline.njk' %}
     </section>
 
