Refinement of URL paths

--- a/resources/sass/components/_all.scss
+++ b/resources/sass/components/_all.scss
@@ -4,3 +4,11 @@
 @import 'header';
 @import 'buttons';
 @import 'article-card';
+
+
+.home-header {
+    height: 15%;
+}
+.home-container {
+    height: 85%;
+}
