--- a/site/includes/layouts/default.njk
+++ b/site/includes/layouts/default.njk
@@ -28,18 +28,19 @@
         <link rel="icon" type="image/png" href="{{ site.images.favicon }}">
     </head>
 
-    <body {% if body_class %} id="{{ body_class }}"{% endif %} class="relative">
+    <body {% if body_class %} id="{{ body_class }}"{% endif %} class="relative bg-beige">
 
         <div id="wrapper" class="wrapper flex flex-col relative min-h-screen">
 
             {# include header #}
-            {% include "components/header.njk" %}
+            {# {% include "components/header.njk" %} #}
 
             {# include content #}
+            Default
             {{ content | safe }}
 
             {# include footer #}
-            {% include "components/footer.njk" %}
+            {# {% include "components/footer.njk" %} #}
 
         </div>
 
