--- a/site/includes/layouts/narrative.njk
+++ b/site/includes/layouts/narrative.njk
@@ -1,8 +1,8 @@
 ---
 layout: default
 ---
-
-<main id="main" class="main bg-indigo-100 flex-row pt-24">
+narrative
+<main id="main" class="main flex-row pt-24">
     <section class="fixed w-full bg-indigo-400">
         <h2>timeline</h2>
         <span id="highlighted" class="text-xl text-white">Highlighted: 0</span>
