--- a/site/includes/layouts/home.njk
+++ b/site/includes/layouts/home.njk
@@ -1,18 +1,13 @@
 ---
 layout: default
-meta_title: Narratives
-meta_description: All your Narratives
-title: Narratives
 ---
+Home
 
 <main id="main" class="main flex flex-1 flex-col md:flex-row">
     <section id="container-centre" class="flex-1">
-        <header class="home-header px-8 pt-8">
-            <h1 class="text-3xl md:text-5xl lg:text-6xl mb-0">{{ title }}</h1>
-        </header>
         
         <div class="home-container flex flex-wrap">
-            {% for post in collections.narrative %}
+            {% for post in collections.subnav %}
                 <article class="w-1/3 h-half hover:bg-white border-gray-500">
                 <a class="block h-full" href="{{ post.url }}">
                     <div class="p-8">
@@ -30,4 +25,4 @@ title: Narratives
             {% endfor %}
         </div>
     </section>
-</main>
+</main> 
