--- a/site/index.njk
+++ b/site/index.njk
@@ -12,6 +12,8 @@ title: Welcome back.
 
         <h1 class="page-title text-5xl">{{ title }}</h1>
 
+        <a class="inline-block p-4 mb-6 bg-blue-400 text-beige rounded-lg hover:bg-gray-700" href="/narratives/">Click Here to get started!</a>
+
         <div class="content">
             <p>A skeleton boilerplate built with <a href="https://www.11ty.io">Eleventy</a> and <a href="https://tailwindcss.com">Tailwind CSS</a>.</p>
 
