--- a/resources/sass/base/_typography.scss
+++ b/resources/sass/base/_typography.scss
@@ -1,4 +1,10 @@
 //==========  Typography ==========//
+@import url('https://rsms.me/inter/inter.css');
+	html { font-family: 'Inter', sans-serif; }
+@supports (font-variation-settings: normal) {
+  	html { font-family: 'Inter var', sans-serif; }
+}
+
 
 // headings
 h1,
