--- a/site/includes/layouts/home.njk
+++ b/site/includes/layouts/home.njk
@@ -2,11 +2,9 @@
 layout: default
 ---
 Home
-
 <main id="main" class="main flex flex-1 flex-col md:flex-row">
     <section id="container-centre" class="flex-1">
-        
-        <div class="home-container flex flex-wrap">
+        <div class="h-full flex flex-wrap">
             {% for post in collections.subnav %}
                 <article class="w-1/3 h-half hover:bg-white border-gray-500">
                 <a class="block h-full" href="{{ post.url }}">
