--- a/site/includes/layouts/questions.njk
+++ b/site/includes/layouts/questions.njk
@@ -3,7 +3,7 @@ layout: default
 ---
 <main id="main" class="main flex">
     <aside class="w-1/4 p-6">
-        <a href="/narratives/narratives-1/timeline/">Back</a>
+        <a class="text-blue-500 hover:text-white hover:bg-iron py-2 px-4 rounded mb-6 inline-block" href="/narratives/narratives-1/timeline/"><span><svg class="h-4 w-4 inline-block fill-current text-black mr-2" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="m3.828 9 6.071-6.071-1.414-1.414-8.485 8.485.707.707 7.778 7.778 1.414-1.414-6.071-6.071h16.172v-2z"/></svg></span>Back</a>
         <h1>Answer Questions</h1>
         <hr/>
         <p>Based on your current narrative, your care team wants to ask a few more questions to better understand you.</p>
