--- a/site/includes/layouts/home.njk
+++ b/site/includes/layouts/home.njk
@@ -1,22 +1,14 @@
 ---
 layout: default
 ---
-Home
 <main id="main" class="main flex flex-1 flex-col md:flex-row">
     <section id="container-centre" class="flex-1">
         <div class="h-full flex flex-wrap">
             {% for post in collections.subnav %}
                 <article class="w-1/3 h-half hover:bg-white border-gray-500">
-                <a class="block h-full" href="{{ post.url }}">
-                    <div class="p-8">
-                        <h2 class="text-3xl mb-6">{{ post.data.title }}</h2>
-                        <div class="md:flex mb-4">
-                            <p class="author">By {{ post.data.patient }}</p>
-                            <p class="hidden md:block px-2">—</p>
-                            <time datetime="{{ post.date }}">
-                                {{ post.date | dateDisplay }}
-                            </time>
-                        </div>
+                <a class="block h-full cursor-pointer" href="{{ post.url }}">
+                    <div class="p-8 flex h-full">
+                        <h2 class="self-center text-3xl mb-6 underline hover:no-underline">{{ post.data.title }}</h2>
                     </div>
                 </a>
                 </article>
