Full Question Flow built

--- a/site/includes/layouts/questions.njk
+++ b/site/includes/layouts/questions.njk
@@ -1,9 +1,14 @@
 ---
 layout: default
+
 ---
+
 <main id="main" class="main flex">
     <aside class="w-1/4 p-6">
-        <a class="text-blue-500 hover:text-white hover:bg-iron py-2 px-4 rounded mb-6 inline-block" href="/narratives/narratives-1/timeline/"><span><svg class="h-4 w-4 inline-block fill-current text-black mr-2" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="m3.828 9 6.071-6.071-1.414-1.414-8.485 8.485.707.707 7.778 7.778 1.414-1.414-6.071-6.071h16.172v-2z"/></svg></span>Back</a>
+        <a class="text-blue-500 hover:text-white hover:bg-iron py-2 px-4 rounded mb-6 inline-block" href="/narratives/narratives-1/timeline/">
+            <span>
+                <svg class="h-4 w-4 inline-block fill-current text-black mr-2" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="m3.828 9 6.071-6.071-1.414-1.414-8.485 8.485.707.707 7.778 7.778 1.414-1.414-6.071-6.071h16.172v-2z"/></svg>
+            </span>Back</a>
         <h1>Answer Questions</h1>
         <hr/>
         <p>Based on your current narrative, your care team wants to ask a few more questions to better understand you.</p>
@@ -16,8 +21,33 @@ layout: default
         </div>
     </section>
     <div class="fixed flex justify-between bottom-0 right-0 w-3/4 py-5 px-6 bg-white border-t-2 border-iron">
-        <a class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Previous</a>
-        <div class="w-1/2 bg-iron">. . . .</div>
-        <a class=" bg-blue-400 hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Next</a>
+        <a href="/narratives/narratives-1/questions{{ prev }}" class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Previous</a>
+        <div class="w-full mx-8 flex justify-center">
+            <div class="flex w-full pb-3">
+
+                {% for post in collections.question %}
+
+                    <div class="flex-grow-0 self-center">
+
+                    {% if page.url == post.url %} {% endif %}
+                        <a href="{{ post.url }}" class="{% if page.url == post.url %} bg-blue-500 {% endif %} w-4 h-4 bg-iron mx-auto rounded-full text-lg text-white flex items-center">
+                            <span class="text-white text-center w-full"></span>
+                        </a>
+                    </div>
+                    <div class="w-1/6 align-center items-center align-middle content-center flex">
+                        <div class="w-full bg-iron items-center align-middle align-center flex-1">
+                            <div class="leading-none h-1" style="width: 100%"></div>
+                        </div>
+                    </div>
+                {% endfor %}
+
+                <div class="flex-grow-0 self-center">
+                    <div class="w-4 h-4 bg-iron mx-auto rounded-full text-lg text-white flex items-center">
+                        <span class="text-white text-center w-full"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a href="/narratives/narratives-1/questions{{ next }}" class=" bg-blue-400 hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Next</a>
     </div>
 </main>
